@@ -1,3 +1,8 @@
+2019-04-18 Philipp Klaus Krause <pkk AT spth.de>
+
+	* lib/variables.mk:
+	  Enable test of pdk15 port.
+
 2019-03-15 Philipp Klaus Krause <pkk AT spth.de>
 
 	* lib/variables.mk:
